Issue #1: Implementing upload image

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -24,3 +24,15 @@
 
 server:
   context-path: /image-service
+
+ixortalk:
+  image-service:
+    bucket: configured-image-bucket
+
+logging:
+  org:
+    springframework:
+      security: DEBUG
+
+security:
+  ignored: "/css/**, /js/**, /webjars/**, /**/favicon.ico"
