--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <prometheus.simpleclient.version>0.0.22</prometheus.simpleclient.version>
         <ixortalk-test.version>1.0.3</ixortalk-test.version>
         <ixortalk-util.version>1.0.2</ixortalk-util.version>
+        <ixortalk-aws-s3-library.version>1.0.2</ixortalk-aws-s3-library.version>
     </properties>
 
     <organization>
@@ -190,6 +191,11 @@
             <version>${ixortalk-util.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.ixortalk</groupId>
+            <artifactId>ixortalk-aws-s3-library</artifactId>
+            <version>${ixortalk-aws-s3-library.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.prometheus</groupId>
             <artifactId>simpleclient</artifactId>
             <version>${prometheus.simpleclient.version}</version>
@@ -263,7 +269,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.8.9</version>
+            <version>2.25.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
