--- a/pom.xml
+++ b/pom.xml
@@ -278,6 +278,12 @@
             <version>2.18.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.findify</groupId>
+            <artifactId>s3mock_2.12</artifactId>
+            <version>0.2.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
